[package]
name = "lobby_server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
uuid = { version = "1.0", features = ["v4"] }
openssl = "0.10"

[features]
default = ["actix-web/openssl"]